made a button to hide the introduction and then display the questions and their answers but nothing else

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="assets/javascript/app.js"></script>
     <title>Trivia Game</title>
 </head>
@@ -23,6 +24,6 @@
     <div id="answers"></div>
     <div id="result"></div>
 
-    
+
 </body>
 </html>
