wrote the functions for some game logic, determining which question is active, the guess function to determine correct answer and updating stats, and the functions to determine the flow of the game filling in questions and answers while showing progress and ending after the last question

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
     <div id="start"><button type="button">Start</button></div>
 
     <div id="question"></div>
-    <div id="answers"></div>
+
+    <div class="buttons">
+        <button id="btn0"><span id="choice0"></span></button>
+        <button id="btn1"><span id="choice1"></span></button>
+        <button id="btn2"><span id="choice2"></span></button>
+        <button id="btn3"><span id="choice3"></span></button>
+    </div>
+
     <div id="result"></div>
 
 
