changed some script to use jquery selectors, added in a retry button that resets the game, got results working as intended and added minimal styles to format the text, buttons and overall container for the quiz

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Trivia Game</title>
 </head>
 <body>
-    <header>
+    <div id="quiz">
         <h1>It's Trivia Time!</h1>
-    </header>
+   
 
     <div id="directions">
         <p>You will have to answer a series of questions and try to get as many answers correct! Click start below to begin!</p>
@@ -21,16 +21,18 @@
     <div id="start"><button type="button">Start</button></div>
 
     <div id="question"></div>
-
+<br>
     <div class="buttons">
         <button id="btn0"><span id="choice0"></span></button>
         <button id="btn1"><span id="choice1"></span></button>
         <button id="btn2"><span id="choice2"></span></button>
         <button id="btn3"><span id="choice3"></span></button>
     </div>
-
+<br>    
+    <div id="progress"></div>
     <div id="result"></div>
-
+    <button id="tryagain" class="none">Start Over</button>
+</div>
 
 </body>
 </html>
