more work on styling and trying to add a timer but failing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="quiz">
-        <h1>It's Trivia Time!</h1>
+        <div id="count"><h1>It's Trivia Time!</h1></div>
    
 
     <div id="directions">
