will add a count timer that will eventually tick down and automatically advance the question. the button click will now display if your answer is correct or incorrect then advance to the next question after a delay

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="quiz">
-        <div id="count"><h1>It's Trivia Time!</h1></div>
+        <h1><div id="count">It's Trivia Time!</div></h1>
    
 
     <div id="directions">
